<resources>
    <string name="app_name">消費税計算</string>
    <string name="title_without_tax">税抜\n計算</string>
    <string name="title_include_tax">税込\n計算</string>
    <string name="please_tap_me">タップして入力</string>
    
    <string name="pref_category">設定</string>
    <string name="pref_key_tax_rate">tax_rate</string>
    <string name="pref_summary_tax_rate">8％</string>
    <string name="pref_title_tax_rate">消費税率</string>
    <string-array name="tax_rate_entries">
        <item>5％</item>
        <item>8％</item>
        <item>10％</item>
    </string-array>
    <string-array name="tax_rate_entry_values">
        <item>1.05</item>
        <item>1.08</item>
        <item>1.1</item>
    </string-array>
    
    <string name="pref_key_calc_method">calc_method</string>
    <string name="pref_title_calc_method">計算方法</string>
    <string name="pref_summary_calc_method">税込み計算</string>
    <string-array name="calc_method_entries">
        <item>税込み計算</item>
        <item>税抜き計算</item>
    </string-array>
    <string-array name="calc_method_entry_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
