<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:title="@string/pref_category">
        
        <ListPreference
            android:key="@string/pref_key_tax_rate"
            android:title="@string/pref_title_tax_rate"
            android:entries="@array/tax_rate_entries"
            android:entryValues="@array/tax_rate_entry_values"
            android:summary="@string/pref_summary_tax_rate" />
        
        <ListPreference
            android:key="@string/pref_key_calc_method"
            android:title="@string/pref_title_calc_method"
            android:entries="@array/calc_method_entries"
            android:entryValues="@array/calc_method_entry_values"
            android:summary="@string/pref_summary_calc_method" />
        
    </PreferenceCategory>

</PreferenceScreen>
